--- a/content/_includes/partials/footer.njk
+++ b/content/_includes/partials/footer.njk
@@ -3,8 +3,8 @@
     <div class="pure-u-1-1">
       <div class="footer">
         <!-- Modify as you see fit :) -->
-        <p>Your footer text</p>
-        <p>Powered by <a href="https://www.11ty.dev/">Eleventy</a> and <a href="https://github.com/lwojcik/eleventy-template-multiplicity">Multiplicity</a></p>
+        <p><a href="https://themidgeekcrisis.com/" target="_blank" rel="me, noopener noreferrer">The Mid-Geek Crisis</a>Two friends talking about gaming, fandom, growing up and family. We love our hobbies and plan to (over)share all things geek every week.</p>
+        <p>Powered by ☕️ 🍊 🎮 <a href="https://www.11ty.dev/">Eleventy</a> and <a href="https://github.com/lwojcik/eleventy-template-multiplicity">Multiplicity</a></p>
       </div>
     </div>
   </div>
