--- a/content/_includes/partials/footer.njk
+++ b/content/_includes/partials/footer.njk
@@ -4,7 +4,8 @@
       <div class="footer">
         <!-- Modify as you see fit :) -->
         <p>Your footer text</p>
-        <p>Powered by <a href="https://www.11ty.dev/">Eleventy</a> and <a href="https://github.com/lwojcik/eleventy-template-multiplicity">Multiplicity</a></p>
+        <p>Powered by <a href="https://www.11ty.dev/">Eleventy</a> and <a href="https://github.com/lwojcik/eleventy-template-multiplicity">Multiplicity</a><br />
+        <a href="proven.lol/3c8595">proven3c8595</a></p>
       </div>
     </div>
   </div>
