--- a/content/_includes/partials/head.njk
+++ b/content/_includes/partials/head.njk
@@ -13,6 +13,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ pageTitle }}</title>
+<link rel="me" href="https://proven.lol/3c8595">
+<link rel="alternate" type="application/rss+xml" title="Site Feed" href="https://themidgeekcrisis.app/feed.xml">
 <meta name="description" content="{{ siteConfig.description }}">
 <meta property="og:type" content="website">
 <meta property="og:image" content="/apple-touch-icon.png">
